--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "knex": "^2.3.0",
     "moment": "^2.29.4",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "Validator": "^1.1.4"
   },
   "scripts": {
-    "start": "node ./main.js"
+    "start": "nodemon ./main.js"
   }
 }
